commit after jwt setup

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,5 @@
 PORT=3000
+MONGOURL = 'mongodb://localhost:27017/taskUser'
+FRONTENDURL = 'http://localhost:5173'
+HASHSALT =10
+SECRETKEY = 'ASDHFSA
